feat : 사용자 설정 조회 아코디언
html 파일 경로 변경, 공통코드패키지 생성, AJAX 방식 셀렉트 조회, 퇴사조치, 잠금조치, 활성화조치